[gd_scene load_steps=2 format=3 uid="uid://qv7rqpxwj24u"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_5j6vm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5j6vm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(0.0110876, 0.0110876, 0.0110876, 1)
layout_mode = 0
offset_left = 443.0
offset_top = 74.0
offset_right = 553.0
offset_bottom = 175.0
scale = Vector2(1.97442, 4.29265)
alignment = 1

[node name="Play" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="ChooseLevel" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Level"

[node name="ExitGame" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/ChooseLevel" to="." method="_on_choose_level_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
